# resume-analyse

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  interview_agent.py  interview_prompts.py  ollama_client.py  pipeline.py  prompts.py  schemas.py
backend/app/api/: analysis.py  auth.py  health.py  interview_session.py  resume.py
backend/app/schemas/: analysis.py  interview_session.py  resume.py
backend/app/services/: __init__.py  auth.py  grounding.py  parser.py  storage.py
backend/data/: app.db-shm  app.db-wal
backend/tests/: __init__.py  test_agent.py  test_auth.py  test_grounding.py  test_interview_agent.py  test_parser.py  test_streaming.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/[id]/: page.tsx
frontend/app/interview/[sessionId]/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AnalysisSkeleton.tsx  AnswerFeedback.tsx  InterviewQuestionList.tsx  InterviewReport.tsx  ProofreadingShowcase.tsx  QuestionSidebar.tsx  ResumeUploader.tsx  SuggestionCard.tsx  TopBar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx  tabs.tsx
frontend/lib/: api.ts  auth-context.tsx  utils.ts
